<resources>
    <string name="app_name">ShoppingCart</string>

    <string name="app_shared_pref">com.senthil.prabhu.android.shoppingcart.preferences.cart_details</string>

    <string name="products_list">Products List</string>
    <string name="loading">Loading...</string>
    <string name="currency">$</string>
    <string name="add_to_cart">Add</string>
    <string name="cart_details">cart_details</string>
    <string name="cart">Cart</string>

    <string name="cart_count_message">You have added</string>
    <string name="empty_cart_message">Your cart is empty</string>
    <string name="payment_method">Payment Method</string>

    <string name="checkout">Checkout</string>
    <string name="total_amount">Total Amount</string>
    <string name="choose_payment_mode">Choose Payment Mode</string>


    <string name="pay_with_cash">Cash On Delivery</string>
    <string name="pay_with_card">Credit/Debit Card \n<b>Coming Soon</b></string>

    <string name="items">items</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="order_total">Order Total</string>
    <string name="confirm">Confirm</string>

    <string name="order_confirmed">Order Confirmed</string>
    <string name="order_success_message">Thank you for your order. You will\n receive email confirmation shortly.</string>

    <string name="continue_shopping">Continue Shopping</string>

</resources>