<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.Cart">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/cart"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="22dp"
                app:fontFamily="@font/poppins_medium"
                tools:ignore="RelativeOverlap" />


        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_area"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                tools:ignore="MissingConstraints">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/cart_sub_heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:text="@string/cart_count_message"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/item_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center"
                    android:textColor="@color/b2connect"
                    android:textSize="22sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/product_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


                <LinearLayout
                    android:id="@+id/total_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/total_amt_lbl"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentLeft="true"
                            android:fontFamily="@font/poppins_regular"
                            android:gravity="start"
                            android:text="Total Amount"
                            android:textColor="@color/black"
                            android:textSize="14sp" />


                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/total_amt_val"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:text="AED 1000"
                            android:textColor="@color/b2connect"
                            android:textSize="14sp" />

                    </RelativeLayout>


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/del_fee_lbl"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:fontFamily="@font/poppins_regular"
                            android:gravity="start"
                            android:text="Delivery Fee"
                            android:textColor="@color/black"
                            android:textSize="14sp" />


                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/del_fee_val"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:fontFamily="@font/poppins_regular"
                            android:text="Free"
                            android:textColor="@color/b2connect"
                            android:textSize="14sp" />

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/b2connect" />


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/net_total_lbl"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentLeft="true"
                            android:fontFamily="@font/poppins_bold"
                            android:gravity="start"
                            android:text="Net Total"
                            android:textColor="@color/black"
                            android:textSize="18sp" />


                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/net_total_val"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:fontFamily="@font/poppins_bold"
                            android:text="AED 1,710"
                            android:textColor="@color/b2connect"
                            android:textSize="18sp" />

                    </RelativeLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/payment_method"
                        android:textColor="@color/b2connect"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/radio_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/b2connect"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@string/pay_with_cash"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            tools:ignore="UnusedAttribute" />


                    </RadioGroup>

                    <RelativeLayout
                        android:id="@+id/check_out_rel"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="end"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="30dp"
                        android:background="@drawable/pink_rounded_circle_btn_bg"
                        android:gravity="center"
                        android:paddingStart="20dp"
                        android:paddingLeft="20dp"
                        android:paddingEnd="20dp"
                        android:paddingRight="20dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/lable"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:gravity="center"
                            android:text="@string/checkout"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/arrow"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_toEndOf="@+id/lable"
                            android:layout_toRightOf="@+id/lable"
                            android:rotation="180"
                            android:tint="@color/white"
                            app:srcCompat="@drawable/ic_back_arrow_white" />


                    </RelativeLayout>


                </LinearLayout>


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>